syntax = "proto3";

package com.nikitahohulia.api.internal.v2.usersvc.input.reqreply.update.proto;

option java_multiple_files = true;

import "com/nikitahohulia/api/internal/v2/usersvc/commonmodels/user/user.proto";

message UpdateUserRequest {
  commonmodels.user.User user = 1;
  string oldUsername = 2;
}

message UpdateUserResponse {
  oneof response {
    Success success = 1;
    Failure failure = 2;
  }

  message Success {
    commonmodels.user.User user = 1;
  }

  message Failure {
    string message = 1;
  }
}
